# vexl

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml
docs/: gatsby-config.js  package.json  postcss.config.js
docs/src/components/: header.js  layout.js
docs/src/css/: style.css
docs/src/pages/: index.js
js/: jison-transformer.js  package.json  rollup.config.js  rollup.config.ts  tsconfig.json
js/sample/: index.html  sample.tsx
js/src/: index.ts  nodes.ts  utils.ts  vexl.jison  vexl.jison.d.ts  visitors.ts
js/src/ui/: Connective.tsx  ConnectiveButton.tsx  LogicBuilder.tsx  LogicCondition.tsx  LogicGroup.tsx  Predicate.tsx  index.ts  index.tsx  schema.ts  utils.ts
js/tests/: evaluation.test.ts  nodes.test.ts  parser.test.ts
js/tools/: compile-jison.ts  jison-asset.js  jison-transformer.js  jison-transformer.ts  parcel-bundler.js
js/ui/: index.tsx  package.json
tests/: test_evaluation.py  test_lexer.py  test_nodes.py  test_parser.py
vexl/: lexer.py  nodes.py  parser.py  visitors.py
